--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "fsb-shedule",
   "version": "0.1.0",
+  "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
