--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/speed-insights": "^1.0.13",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "papaparse": "^5.4.1",
