--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@vercel/speed-insights": "^1.0.13",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "google-auth-library": "^9.14.2",
+    "google-spreadsheet": "^4.1.4",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
