--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.14",
     "web-vitals": "^2.1.4"
